--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.42.1",
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "bootstrap": "^5.1.1",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0"
   }
