--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Build
-        run: dotnet publish src -c Release -o deploy
+        run: dotnet publish TerraceApi -c Release -o deploy
       - name: Copy via ssh
         uses: garygrossgarten/github-action-scp@v0.5.3
         with:
