--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -2,6 +2,7 @@ name: update-api
 on: [push]
 jobs:
   build:
+    environment: API - Backend
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -19,7 +20,7 @@ jobs:
         with:
           local: deploy/
           remote: ${{ secrets.DEPLOY_FOLDER }}
-          host: oc.encodeous.ca
+          host: ${{ secrets.SSH_HOST }}
           port: 225
           username: ${{ secrets.SSH_USER }}
           privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -27,7 +28,7 @@ jobs:
         uses: garygrossgarten/github-action-ssh@v0.3.0
         with:
           command: sudo /bin/systemctl restart terrace.service
-          host: oc.encodeous.ca
+          host: ${{ secrets.SSH_HOST }}
           port: 225
           username: ${{ secrets.SSH_USER }}
           privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
