--- a/TerraceApi/terrace.service
+++ b/TerraceApi/terrace.service
@@ -17,6 +17,7 @@ Restart=always
 # amount of time to wait before restarting the service                  
 RestartSec=5
 
+Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_ROOT=/app/dotnet
 
 [Install]
