--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Update project version
         uses: roryprimrose/set-vs-sdk-project-version@v1
         with:
-          informationalVersion: ${{ steps.vars.outputs.sha_short }}
+          informationalVersion: ${{ github.sha }}
       - name: Build
         run: dotnet publish TerraceApi -c Release -o deploy
       - name: Copy via ssh
