--- a/TerraceApi/TerraceApi.csproj
+++ b/TerraceApi/TerraceApi.csproj
@@ -7,8 +7,14 @@
         <InformationalVersion>Dev-LOCAL</InformationalVersion>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
+    
     <ItemGroup>
         <PackageReference Include="GitRCFS" Version="0.1.0" />
+        <PackageReference Include="Markdig.Signed" Version="0.28.1" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="6.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
