--- a/TerraceSite/package.json
+++ b/TerraceSite/package.json
@@ -10,14 +10,18 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "autoprefixer": "^10.4.7",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.14",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
-    "svelte-preprocess": "^4.10.3"
+    "svelte-highlight": "^6.0.1",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.3"
   },
   "dependencies": {
     "@rollup/plugin-replace": "^3.1.0",
