--- a/TerraceSite/package.json
+++ b/TerraceSite/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@types/victor": "^1.1.0",
     "autoprefixer": "^10.4.7",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
@@ -28,6 +29,7 @@
     "fast-glob": "^3.2.11",
     "rollup-plugin-scss": "^3.0.0",
     "sirv-cli": "^2.0.0",
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "victor": "^1.1.0"
   }
 }
