--- a/TerraceSite/package.json
+++ b/TerraceSite/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear --single"
+    "start": "sirv public --no-clear --single",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -21,8 +22,13 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-highlight": "^6.0.1",
-    "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.3"
+    "svelte-preprocess": "^4.0.0",
+    "tailwindcss": "^3.1.3",
+    "svelte-check": "^2.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "typescript": "^4.0.0",
+    "tslib": "^2.0.0",
+    "@tsconfig/svelte": "^2.0.0"
   },
   "dependencies": {
     "@rollup/plugin-replace": "^3.1.0",
